@@ -5,6 +5,7 @@ Version 0.1-3
 =============
 
 NEW FEATURES
+- new data file "groundbeef" (groundbeef.rda and groundbeef.Rd) and new use of this dataset in some examples.
 - new function gofstat. 
     Goodness-of-fit statistics are no more computed by fitdist but may computed and printed
     by the use of the function gofstat. In this new function, the whole results computed are not printed :
